force-app/main/default/objects/analyticsadopt__DatasetDetails__c/analyticsadopt__DatasetDetails__c.object-meta.xml
<CustomObject>
    <label>Datasets to Assets Mapping</label>
    <nameField>
        <label>DatasetDetails Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Datasets to Assets Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>