force-app/main/default/objects/analyticsadopt__DatasetDetails__c/fields/analyticsadopt__App_ID__c.field-meta.xml
<CustomField>
    <fullName>analyticsadopt__App_ID__c</fullName>
    <label>App ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>