force-app/main/default/objects/analyticsadopt__DatasetDetails__c/fields/analyticsadopt__App_Name__c.field-meta.xml
<CustomField>
    <fullName>analyticsadopt__App_Name__c</fullName>
    <label>App Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>