force-app/main/default/objects/analyticsadopt__DatasetDetails__c/fields/analyticsadopt__Row_Count__c.field-meta.xml
<CustomField>
    <fullName>analyticsadopt__Row_Count__c</fullName>
    <label>Row Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>