force-app/main/default/objects/analyticsadopt__DatasetDetails__c/listViews/analyticsadopt__All.listView-meta.xml
<ListView>
    <fullName>analyticsadopt__All</fullName>
    <columns>NAME</columns>
    <columns>analyticsadopt__App_Name__c</columns>
    <columns>analyticsadopt__Dataset_Name__c</columns>
    <columns>analyticsadopt__Dependent_Dashboards__c</columns>
    <columns>analyticsadopt__Dependent_Lenses__c</columns>
    <columns>analyticsadopt__Row_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>